[package]
edition = "2021"
name = "covid-19-reporter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.15.0", features = ["full"]}
